java 8 compile issue